updated myQuilt spage

--- a/myQuilt.html
+++ b/myQuilt.html
@@ -25,6 +25,17 @@
         </div>
     </header>
    
+    <main>
+        <section>
+            <h2>The initial diagram for myQuilt:</h2>
+            <img src="images/Journal-App-Map.png" alt="myQuilt's initial diagram">
+            <p>
+                At first, the concept was to have three tabs, navigatble by a tab bar at the bottom: a journal view, with swipable pages,
+                a grid view, that would later become the quilt, and a text entry view.
+            </p>
+    </section>
+    </main>
+
     <footer>
         <l>&copy; 2024 portfolio</l>
     </footer>
