--- a/index.html
+++ b/index.html
@@ -47,9 +47,19 @@
             </div>
         </section>
         </a>
-        <section id="contact">
+        <section id="ddo">
             <h2>Systems diagrams for Dubberly Design Office</h2>
-            <p>This is the contact section.</p>
+            <p>A poster I worked on showing different approaches to venn diagrams. A solution space of solution spaces.</p>
+
+            <img src="images/venn_diagrams.png" alt="visualizing venn diagrams">
+        </section>
+
+        <section id="ddo">
+            <h2>Using AI in design, by making programming more approachable.</h2>
+            <p>A challenge for this logo for the data company DrumWave was recoloring for variants, as each version has 128 different colors. Leveraging AI allowed me to create a program that automatically produced new versions, given an initial color scheme.</p>
+            <div class="drumwave">
+            <img src="images/drumWave_logos.png" width=100% alt="multicolored logos">
+            </div>
         </section>
     </main>
     <footer>
