--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
         <section id="ddo">
             <h2>Using AI in design, by making programming more approachable.</h2>
-            <p>A challenge for this logo for the data company DrumWave was recoloring for variants, as each version has 128 different colors. Leveraging AI allowed me to create a program that automatically produced new versions, given an initial color scheme.</p>
+            <p>A challenge for this logo for the data company DrumWave was recoloring for variants, as each version has 7 outer colors, and the remaining 121 possible combinations of them. Leveraging AI allowed me to create a program that automatically produced new versions, given an initial 7 color scheme.</p>
             <div class="drumwave">
             <img src="images/drumWave_logos.png" width=100% alt="multicolored logos">
             </div>
