added artwork and detail pages

--- a/ai-logo.html
+++ b/ai-logo.html
@@ -18,7 +18,7 @@
             <h1>Jake Sheiner</h1>
             <nav>
                 <ul>
-                    <a href="index.html" class="bi bi-arrow-left"> Home</a>
+                    <a href="index.html" class="bi bi-arrow-left">Home</a>
                    
                 </ul>
             </nav>
@@ -29,11 +29,10 @@
         
         <section>
             <a href="https://github.com/jakesheiner/myQuilt">check out the Github here</a>
-            <h2>The initial diagram for myQuilt:</h2>
+            <h2>My first experience leveraging AI to do design work.</h2>
             <img src="images/Journal-App-Map.png" alt="myQuilt's initial diagram">
             <p>
-                At first, the concept was to have three tabs, navigatble by a tab bar at the bottom: a journal view, with swipable pages,
-                a grid view, that would later become the quilt, and a text entry view.
+                When tasked with creating variants for a logo with 128 colors in early 2023, I was able to automate the process using the new chatGPT bot.
             </p>
     </section>
     <section>
