added email link

--- a/index.html
+++ b/index.html
@@ -36,7 +36,9 @@
           <div>
             <p>Hi! I am a passionate designer by day, and artist and animator by night. </p>
             <a href="https://www.linkedin.com/in/jacob-sheiner-052828218" class="bi">&#128188 LinkedIn</a>
-            
+            <a href="mailto:jacob.sheiner@gmail.com" class ="bi">&#128231 jacob.sheiner@gmail.com</a>
+
+
         </div>
             <img src="images/profile_pic_nobg.png" width = 50% alt="a picture of jake">
             
