venn detail page

--- a/ai-logo.html
+++ b/ai-logo.html
@@ -25,7 +25,7 @@
         </div>
     </header>
    
-    <main class="ai-logo">
+    <main class="details">
         
         <section>
             <a href="https://staging.dubberly.com/jake/230822-Programming_with_ChatGPT/programming%20with%20chatGPT.pdf"> Check out the full presentation here.</a>
