--- a/demo.html
+++ b/demo.html
@@ -71,7 +71,16 @@
   </style>
 </head>
 <body>
-
+<div>
+  
+  
+  How to play:
+  <ul>
+    <li>click and drag to build your castle (blocks can only be placed next to existing blocks)</li>
+    <li>click on clasts to 'recharge' your castle bar, and build more blocks</li>
+    <li>click add clast button to add a clast to the lode</li>
+  </ul> 
+</div>
 <div id="container">
   <canvas id="gridCanvas" width="300" height="300"></canvas>
   <div id="powerBarContainer">
@@ -81,7 +90,7 @@
 
 <div id="powerCirclesContainer">
   <div id="powerCircles"></div>
-  <button id="addCircleButton">Add Circle</button>
+  <button id="addCircleButton">Add Clast</button>
 </div>
 
 <script>
