fixed case sensitive image name

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@ I made the app for fun, because I wanted to learn iOS development, become famili
                     <div class="project-content">
                         <div class="project-image">
                    
-                            <img src="images/drumwave_logos.png" style="padding:2rem; padding-left: 0; padding-top:0;" alt="venn diagram poster">
+                            <img src="images/drumWave_logos.png" style="padding:2rem; padding-left: 0; padding-top:0;" alt="venn diagram poster">
                     
                         </div>
                     <div class="project-text">
