--- a/demo.html
+++ b/demo.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Interactive Grid with Mineral Power Circles</title>
+  <title>Castle Builder Game with Overlapping SVGs</title>
   <style>
     body {
       display: flex;
       align-items: center;
       flex-direction: column;
       margin: 0;
-      padding-top: 20px; /* Padding at the top */
+      padding-top: 20px;
       background-color: #f0f0f0;
     }
     #container {
@@ -20,227 +20,160 @@
     }
     canvas {
       border: 1px solid #ccc;
-      background-color: #87CEEB; /* Sky blue background for grid */
-    }
-    #powerBarContainer {
-      width: 20px;
-      height: 300px;
-      background-color: #ddd;
-      border: 1px solid #aaa;
-      margin-left: 10px;
-      display: flex;
-      flex-direction: column-reverse;
-    }
-    #powerBar {
-      width: 100%;
-      background-color: #76c7c0;
-    }
-    #powerCirclesContainer {
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      margin-top: 10px;
-    }
-    #powerCircles {
-      display: flex;
-      flex-wrap: wrap;
-      width: 300px;
-      height: 150px;
-      position: relative;
-      margin-top: 10px;
-      background: linear-gradient(to bottom, #ffe4c4, #f4a460, #d2691e, #a0522d, #8b4513); /* Earth layers gradient */
-      padding: 10px;
-      gap: 20px;
-    }
-    .power-circle {
-      width: 30px;
-      height: 30px;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-    #addCircleButton {
-      margin-top: 10px;
-      padding: 8px 16px;
-      font-size: 16px;
-      cursor: pointer;
-      background-color: #32CD32;
-      border: none;
-      color: #fff;
-      border-radius: 4px;
+      background-color: #87CEEB; /* Sky blue background for the grid */
     }
   </style>
 </head>
 <body>
-<div>
-  
-  
-  How to play:
-  <ul>
-    <li>click and drag to build your castle (blocks can only be placed next to existing blocks)</li>
-    <li>click on clasts to 'recharge' your castle bar, and build more blocks</li>
-    <li>click add clast button to add a clast to the lode</li>
-  </ul> 
-</div>
-<div id="container">
-  <canvas id="gridCanvas" width="300" height="300"></canvas>
-  <div id="powerBarContainer">
-    <div id="powerBar"></div>
-  </div>
-</div>
 
-<div id="powerCirclesContainer">
-  <div id="powerCircles"></div>
-  <button id="addCircleButton">Add Clast</button>
+<div id="container">
+  <canvas id="gridCanvas" width="900" height="600"></canvas>
 </div>
 
 <script>
   const canvas = document.getElementById('gridCanvas');
   const ctx = canvas.getContext('2d');
-  const squareSize = 30;
+  const squareSize = 30; // Cell size of 30x30 pixels
   const rows = canvas.height / squareSize;
   const cols = canvas.width / squareSize;
-  const grid = Array.from({ length: rows }, (_, row) => Array(cols).fill(row === rows - 1 ? "ground" : false)); // Ground row at the bottom
-  const maxPower = 50;
-  let power = maxPower;
-  let isDrawing = false;
-  const powerCostPerSquare = 5;
+  const grid = Array.from({ length: rows }, () => Array(cols).fill(false));
+  let isDragging = false;
 
-  // Pre-light middle squares in the row above the ground row
-  const startCol = Math.floor(cols / 2) - 1;
-  const initialLitSquares = [startCol, startCol + 1];
-  initialLitSquares.forEach(col => {
-    grid[rows - 2][col] = true;
-  });
+  // Preload two versions of each SVG image (with and without window), plus one piece with no window version
+  const svgImages = {
+    tower: [new Image(), new Image()],
+    wall: [new Image(), new Image()],
+    archLeft: [new Image(), new Image()],
+    archRight: [new Image(), new Image()],
+    balcony: [new Image()]  // Gate only has one version
+  };
+
+  // Specify image sources for each version (with window and without window)
+  svgImages.tower[0].src = 'tower.svg';           // Without window
+  svgImages.tower[1].src = 'towerWindow.svg';     // With window
+  
+  svgImages.wall[0].src = 'wall.svg';             // Without window
+  svgImages.wall[1].src = 'wallWindow.svg';       // With window
+  
+  svgImages.archLeft[0].src = 'archLeft.svg';     // Without window
+  svgImages.archLeft[1].src = 'archLeftWindow.svg'; // With window
+  
+  svgImages.archRight[0].src = 'archRight.svg';   // Without window
+  svgImages.archRight[1].src = 'archRightWindow.svg'; // With window
+  
+  svgImages.balcony[0].src = 'balcony.svg';             // No window version, only one version
 
   function drawGrid() {
     ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+    // Draw background cells first
     for (let row = 0; row < rows; row++) {
       for (let col = 0; col < cols; col++) {
-        if (grid[row][col] === "ground") {
-          ctx.fillStyle = '#32CD32'; // Grass green color for ground row
-        } else if (grid[row][col]) {
-          ctx.fillStyle = '#e76f51'; // Darker, saturated orange for lit squares
-        } else {
-          ctx.fillStyle = '#87CEEB'; // Sky blue for unlit squares
-        }
+        ctx.fillStyle = "#87CEEB"; // Sky blue background for the grid
         ctx.fillRect(col * squareSize, row * squareSize, squareSize, squareSize);
         ctx.strokeStyle = '#ccc';
         ctx.strokeRect(col * squareSize, row * squareSize, squareSize, squareSize);
       }
     }
+
+    // Then draw the pieces on top of the background cells
+    for (let row = 0; row < rows; row++) {
+      for (let col = 0; col < cols; col++) {
+        const type = determineCastlePiece(row, col);
+
+        if (type) {
+          // Randomly choose between two versions of the piece (50/50 chance for windowed types)
+          let randomVersion;
+          if (svgImages[type].length === 1) {
+            // If the piece only has one version, don't randomize
+            randomVersion = 0;  // Always use the first (only) version
+          } else {
+            // For pieces with multiple versions (e.g., tower, wall), we randomly pick between them
+            randomVersion = Math.floor(Math.random() * 3);  // 0, 1, or 2
+            // If randomVersion is 2, use the windowed version
+            randomVersion = randomVersion === 2 ? 1 : 0;
+          }
+
+          // Get the selected image for this piece type
+          const selectedImage = svgImages[type][randomVersion];
+
+          // Calculate the position to center the image on the current cell
+          const x = col * squareSize - 30; // Adjust to draw the image so that it covers 3x3 cells
+          const y = row * squareSize - 30; // Adjust to draw the image so that it covers 3x3 cells
+
+          // Draw the image, centered over the clicked cell, with 90x90 size
+          ctx.drawImage(selectedImage, x, y, 90, 90);
+        }
+      }
+    }
   }
 
-  function updatePowerBar() {
-    const powerBar = document.getElementById('powerBar');
-    powerBar.style.height = `${(power / maxPower) * 100}%`;
-  }
+  // Determine castle piece type based on 8 neighboring squares
+  function determineCastlePiece(row, col) {
+    if (!grid[row][col]) return null;
 
-  function getSquarePosition(x, y) {
-    const col = Math.floor(x / squareSize);
-    const row = Math.floor(y / squareSize);
-    return { row, col };
-  }
+    const top = row > 0 && grid[row - 1][col];
+    const bottom = row < rows - 1 && grid[row + 1][col];
+    const left = col > 0 && grid[row][col - 1];
+    const right = col < cols - 1 && grid[row][col + 1];
+    const topLeft = row > 0 && col > 0 && grid[row - 1][col - 1];
+    const topRight = row > 0 && col < cols - 1 && grid[row - 1][col + 1];
+    const bottomLeft = row < rows - 1 && col > 0 && grid[row + 1][col - 1];
+    const bottomRight = row < rows - 1 && col < cols - 1 && grid[row + 1][col + 1];
 
-  function canLightUpSquare(row, col) {
-    if (row < 0 || row >= rows - 1 || col < 0 || col >= cols || grid[row][col] || power < powerCostPerSquare) return false;
+    if (!top && !left && !right && !topLeft && !topRight) {
+      return "tower";
+    }
+    
+    if (topLeft && !left) {
+      return "archLeft";
+    }
 
-    const adjacentSquares = [
-      { r: row - 1, c: col },
-      { r: row + 1, c: col },
-      { r: row, c: col - 1 },
-      { r: row, c: col + 1 }
-    ];
+    if (topRight && !right) {
+      return "archRight";
+    }
+    if ((left || right) && (!top && !topLeft && !topRight)) {
+      return "wall";
+    }
+    if (left && right && top && topLeft && topRight && bottom && bottomLeft && bottomRight) {
+      return "balcony";
+    }
 
-    return adjacentSquares.some(({ r, c }) => r >= 0 && r < rows && c >= 0 && c < cols && grid[r][c] === true);
+    // If there is an open area with no adjacent squares, place a gate (example for testing)
+    return "wall"; // You can modify the logic to place the gate conditionally
   }
 
   function lightUpSquare(row, col) {
-    if (canLightUpSquare(row, col)) {
+    if (row >= 0 && row < rows && col >= 0 && col < cols && !grid[row][col]) {
       grid[row][col] = true;
-      power -= powerCostPerSquare;
       drawGrid();
-      updatePowerBar();
     }
   }
-
-  function getRandomColor() {
-    const colors = ['#ff6f61', '#6b5b95', '#88b04b', '#f7cac9', '#92a8d1'];
-    return colors[Math.floor(Math.random() * colors.length)];
-  }
-
-  function createPowerCircles() {
-    const powerCirclesContainer = document.getElementById('powerCircles');
-    for (let i = 0; i < 20; i++) {
-      addPowerCircle(powerCirclesContainer);
-    }
-  }
-
-  function addPowerCircle(container) {
-    const circle = document.createElement('div');
-    circle.className = 'power-circle';
-    circle.style.backgroundColor = getRandomColor();
-
-    let x, y, overlapping;
-    do {
-      x = Math.random() * (container.clientWidth - 40);
-      y = Math.random() * (container.clientHeight - 40);
-      overlapping = false;
-
-      for (let j = 0; j < container.children.length; j++) {
-        const existingCircle = container.children[j];
-        const rect = existingCircle.getBoundingClientRect();
-        const distance = Math.sqrt((rect.left - x) ** 2 + (rect.top - y) ** 2);
-        if (distance < 50) {
-          overlapping = true;
-          break;
-        }
-      }
-    } while (overlapping);
-
-    circle.style.left = `${x}px`;
-    circle.style.top = `${y}px`;
-    circle.style.position = 'absolute';
-
-    circle.addEventListener('click', () => {
-      if (power < maxPower) {
-        power += powerCostPerSquare;
-        power = Math.min(power, maxPower);
-        updatePowerBar();
-        container.removeChild(circle);
-      }
-    });
-
-    container.appendChild(circle);
-  }
-
-  document.getElementById('addCircleButton').addEventListener('click', () => {
-    addPowerCircle(document.getElementById('powerCircles'));
-  });
 
   canvas.addEventListener('mousedown', (e) => {
-    isDrawing = true;
-    const { row, col } = getSquarePosition(e.offsetX, e.offsetY);
+    isDragging = true;
+    const col = Math.floor(e.offsetX / squareSize);
+    const row = Math.floor(e.offsetY / squareSize);
     lightUpSquare(row, col);
   });
 
   canvas.addEventListener('mousemove', (e) => {
-    if (isDrawing) {
-      const { row, col } = getSquarePosition(e.offsetX, e.offsetY);
+    if (isDragging) {
+      const col = Math.floor(e.offsetX / squareSize);
+      const row = Math.floor(e.offsetY / squareSize);
       lightUpSquare(row, col);
     }
   });
 
   canvas.addEventListener('mouseup', () => {
-    isDrawing = false;
+    isDragging = false;
   });
 
   canvas.addEventListener('mouseleave', () => {
-    isDrawing = false;
+    isDragging = false;
   });
 
   drawGrid();
-  updatePowerBar();
-  createPowerCircles();
 </script>
 
 </body>
