--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
            
           <div>
             <p>Hi! I am a passionate designer by day, and artist and animator by night. </p>
-            <a href="https://www.linkedin.com/in/jacob-sheiner-052828218" class="bi">&#128188 LinkedIn</a>
-            <a href="mailto:jacob.sheiner@gmail.com" class ="bi">&#128231 jacob.sheiner@gmail.com</a>
+            <a href="https://www.linkedin.com/in/jacob-sheiner-052828218" class="bi">LinkedIn</a>
+            <a href="mailto:jacob.sheiner@gmail.com" class ="bi">jacob.sheiner@gmail.com</a>
 
 
         </div>
