add castles iframe and give it custom resizing

--- a/index.html
+++ b/index.html
@@ -46,6 +46,30 @@
        
             <h1>Design Work</h1>
             <div class="portfolio">
+                <div class="project">
+                    <h2>Interactive Castle Builder</h2>
+                    <div class="project-content">
+                        <div class="project-text">
+                            <p><em>Goal:</em><br>
+                                Build your own castle by clicking and dragging on the grid. The builder intelligently places towers, walls, arches, and windows based on the surrounding pieces.
+                            </p>
+                            <p>
+                                <em>Motivation:</em><br>
+                                Created as an experiment in procedural architecture generation and interactive design.
+                            </p>
+                            <p style="font-size: 0.5rem;">
+                                Canvas API<br>
+                                SVG Graphics<br>
+                                Procedural Generation<br>
+                                Interactive Design
+                            </p>
+                            <p><br>Try it out!</p>
+                        </div>
+                        <div class="project-image castle-demo" style="min-width: 300px;">
+                            <iframe src="demo.html" width="920" height="640" frameborder="0" scrolling="no"></iframe>
+                        </div>
+                    </div>
+                </div>
                 
                 <a href="myQuilt.html" class="project">
                     <h2>myQuilt, an AI powered journaling app</h2>
