--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                                 <em>Motivation:</em><br>
 I made the app for fun, because I wanted to learn iOS development, become familiar with using APIs, especially those having to do with AI. I also wanted to start journaling, and had the idea to create a journaling app that provides some feedback for entries.
                             </p>
-                        <p style="font-size: 0.5rem;">
+                        <p class="small">
                             iOS development<br>
                             Mobile interface design<br>
                             API integration<br>
