castle card update

--- a/myQuilt.html
+++ b/myQuilt.html
@@ -30,7 +30,7 @@
         <section>
             <a href="https://github.com/jakesheiner/myQuilt">check out the Github here</a>
             <h2>How it works:</h2>
-            <img src="images/MyQuilt_Map.png" alt="myQuilt's initial diagram">
+            <img src="images/MyQuiltMap.svg" alt="myQuilt's initial diagram">
             <p>
                 At first, the concept was to have three tabs, navigatble by a tab bar at the bottom: a journal view, with swipable pages,
                 a grid view, that would later become the quilt, and a text entry view.
