--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                         </div>
                         <div class="project-image castle-demo" style="min-width: 300px;">
                             <canvas id="gridCanvas" width="450" height="450"></canvas>
+                            <button id="clearCanvas" class="clear-button">Clear Castle</button>
                             <script src="castleScript.js"></script>
                         </div>
                     </div>
