#instructions below canvas

--- a/index.html
+++ b/index.html
@@ -70,9 +70,16 @@
                         </div>
                         <div class="project-image castle-demo" style="min-width: 300px;">
                             <canvas id="gridCanvas" width="450" height="450"></canvas>
-                            <button id="clearCanvas" class="clear-button">Clear</button>
-                            <script src="castleScript.js"></script>
+                            <div id="instructions">
+                                <div id="left">
+                                    <p>Click or click-drag to draw.</p>
+                                    <p>Shift-click to clear a cell.</p>
+                                </div>
+                                <div id="right"><button id="clearCanvas" class="clear-button">Reset</button>
+                            </div>
                         </div>
+                        <script src="castleScript.js"></script>
+                    </div>
                     </div>
                 </div>
                 
