removed an inline style

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                                 <em>Motivation:</em><br>
                                 Created as an experiment in procedural architecture generation and interactive design.
                             </p>
-                            <p style="font-size: 0.5rem;">
+                            <p class="small">
                                 Canvas API<br>
                                 SVG Graphics<br>
                                 Procedural Generation<br>
