added shift-click to clear

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                             <div id="instructions">
                                 <div id="left">
                                     <p>Click or click-drag to draw.</p>
-                                    <p>Shift-click to clear a cell.</p>
+                                    <p>Shift-click to clear.</p>
                                 </div>
                                 <div id="right"><button id="clearCanvas" class="clear-button">Reset</button>
                             </div>
