adding castle controls

--- a/index.html
+++ b/index.html
@@ -78,6 +78,15 @@
                         </div>
                         <div class="project-image castle-demo" style="min-width: 300px;">
                             <canvas id="gridCanvas" width="450" height="450"></canvas>
+                            <div id="instructions">
+                                <div id="left">
+                                    <p>Click or click-drag to draw.</p>
+                                    <p>Shift-click to clear.</p>
+                                </div>
+                                <div id="right">
+                                    <button id="clearCanvas" class="button-24">Reset</button>
+                                </div>
+                            </div>
                             <script src="castleScript.js"></script>
                         </div>
                     </div>
