art section ui update

--- a/ai-logo.html
+++ b/ai-logo.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>Jake Sheiner</h1>
+            <h1>JAKE SHEINER</h1>
             <nav>
                 <ul>
                     <a href="index.html" class="bi bi-arrow-left"> Home</a>
