--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <p>Hi! I am a passionate designer by day, and artist and animator by night. </p>
 
             <div class="project-text">
-            <p>On the lookout for my next role, I am excited to leverage my visual design and systems thinking skills to build something great. I am extremely observant, a fast learner, with a knack for figuring out complex problems.</p>
+            <p>I am excited to leverage my visual design and systems thinking skills to build something great. I am extremely observant, a fast learner, with a knack for figuring out complex problems.</p>
 
             <p>Professionally, I have created digestible diagrams for complex systems, created user personas, and researched and written and presented on the frameworks of LLMs, Image generators, and HVAC systems. Recently I have been fascinated with iOS development, and just finished creating myQuilt, an AI powered journaling app.</p>
             
