changed image name for case sensitivity
muse_hero.JPG

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                             </div>
                         </div>
                     <div class="project-image">
-                       <img src="images/muse_hero.jpg" alt="the muse view">
+                       <img src="images/muse_hero.JPG" alt="the muse view">
                       
                     </div>
                 </div>
