more case correction
muse details page

--- a/muse.html
+++ b/muse.html
@@ -33,7 +33,7 @@
                 </p>
             </div>
             <div class="column">
-                <img src="images/muse_hero.jpg" alt="Muse project">
+                <img src="images/muse_hero.JPG" alt="Muse project">
             </div>
         </div>
 
@@ -57,7 +57,7 @@
                 </p>
             </div>
             <div class="column">
-                <img src="images/muse_process.jpg" alt="Muse final assembly">
+                <img src="images/muse_process.JPG" alt="Muse final assembly">
                 <p><em>Getting it working</em><br>
                     After much tweaking, building, tearing down and rebuilding, we did our final wiring and assembly.
                 </p>
