--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                     <p>Scroll to explore my work.</p>
                 </div>
                 <div class="column">
-                    <img src="images/profile_pic_circle.png" style="max-height: 300px;" alt="a picture of jake">
+                    <img src="images/jake_face.png" style="max-height: 300px;" alt="a picture of jake">
                 </div>
             </div>
         </section>
