--- a/myQuilt.html
+++ b/myQuilt.html
@@ -5,21 +5,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jake Sheiner</title>
+    <link rel="icon" type="image/x-icon" href="images/favicon.svg">
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
-
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&family=Teko:wght@300..700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
    
 </head>
 <body>
     <header>
         <div class="header-container">
-            <h1>JAKE SHEINER</h1>
+            <h1>jake sheiner</h1>
             <nav>
                 <ul>
-                    <a href="index.html" class="bi bi-arrow-left"> Home</a>
-                   
+                    <li><a href="index.html#work">work</a></li>
+                    <li><a href="index.html#about">about</a></li>
+                    <li><a href="playground.html">playground</a></li>
                 </ul>
             </nav>
         </div>
