--- a/playground.html
+++ b/playground.html
@@ -16,7 +16,7 @@
 <body>
     <header>
         <div class="header-container">
-            <h1>JAKE SHEINER</h1>
+            <h1>jake sheiner</h1>
             <nav>
                 <ul>
                     <li><a href="index.html#work">work</a></li>
