--- a/gallup.html
+++ b/gallup.html
@@ -30,7 +30,7 @@
         <div class="row">
             <div class="column">
                 <p><em>Data visualization for Gallup</em><br>
-                    Ideated and created working prototypes for data visualization of Clifton Strengths assessment results. Turning raw data into insights that are easy to understand,and intuitive to act on. The prototypes were functional allowing the team at gallup to test them with their own data, creating a deeper dialogie between udesigner and stakeholder.
+                    Ideated and created working prototypes for data visualization of Clifton Strengths assessment results. Turning raw data into insights that are easy to understand, and intuitive to act on. The prototypes were functional allowing the team at gallup to test them with their own data, creating a deeper dialogie between udesigner and stakeholder.
                 </p>
             </div>
             <div class="column">
@@ -43,7 +43,7 @@
 
         <!-- Problem -->
         <section class="case-block case-block-problem">
-            <span class="case-block-label">Problem</span>
+            <span class="case-block-label">what was the problem?</span>
             <h2>Strengths assessment results need to make sense for any team that uses the test.</h2>
             <p>Raw scores and dense reports don’t help teams act. The goal was clear, intuitive visualizations so any group could see compatibility, trends, and gaps—and use them for team building and assessment.</p>
             <h3>Visualizations were designed to analyze compatibility at various levels.</h3>
@@ -52,7 +52,7 @@
 
         <!-- Solution -->
         <section class="case-block case-block-solution">
-            <span class="case-block-label">Solution</span>
+            <span class="case-block-label">How did I solve it?</span>
             <div class="details-section">
                 <h2>Scrollytelling first—NYT style.</h2>
                 <p>Create narratives from test data so insights are meaningful and digestible.</p>
@@ -100,7 +100,7 @@
 
         <!-- Impact -->
         <section class="case-block case-block-impact">
-            <span class="case-block-label">Impact</span>
+            <span class="case-block-label">What was the impact?</span>
             <h2>The executive team could test and compare visualization methods with real data.</h2>
             <p>Because the prototypes were functional and accepted real uploads, they became truly hands-on—giving Gallup a clear path to choose which visualizations work best for any team using the assessment.</p>
             <div class="details-video-fullwidth">
