gallup case study updates

--- a/gallup.html
+++ b/gallup.html
@@ -27,11 +27,10 @@
     </header>
 
     <main class="details gallup-case-study">
+        <h1 class="gallup-case-study-title">Data visualization for Gallup</h1>
         <div class="row">
             <div class="column">
-                <p><em>Data visualization for Gallup</em><br>
-                    Ideated and created working prototypes for data visualization of Clifton Strengths assessment results. Turning raw data into insights that are easy to understand, and intuitive to act on. The prototypes were functional allowing the team at gallup to test them with their own data, creating a deeper dialogie between udesigner and stakeholder.
-                </p>
+                <p>Ideated and created working prototypes for data visualization of Clifton Strengths assessment results. Turning raw data into insights that are easy to understand, and intuitive to act on. The prototypes were functional allowing the team at gallup to test them with their own data, creating a deeper dialogie between udesigner and stakeholder.</p>
             </div>
             <div class="column">
                 <video class="details-video" muted loop playsinline autoplay
@@ -44,10 +43,29 @@
         <!-- Problem -->
         <section class="case-block case-block-problem">
             <span class="case-block-label">what was the problem?</span>
-            <h2>Strengths assessment results need to make sense for any team that uses the test.</h2>
+            <h2>Strengths assessment results need to make sense for any team <br>that uses the test.</h2>
             <p>Raw scores and dense reports don’t help teams act. The goal was clear, intuitive visualizations so any group could see compatibility, trends, and gaps—and use them for team building and assessment.</p>
             <h3>Visualizations were designed to analyze compatibility at various levels.</h3>
-            <img class="details-img-half" src="images/comparison-levels.png" alt="Comparison levels for compatibility analysis">
+            <div class="comparison-levels-row">
+                <figure class="comparison-level-item">
+                    <div class="comparison-level-frame">
+                        <img src="images/comparison_1.svg" alt="Individual to individual comparison">
+                    </div>
+                    <figcaption>individual to individual</figcaption>
+                </figure>
+                <figure class="comparison-level-item">
+                    <div class="comparison-level-frame">
+                        <img src="images/comparison_2.svg" alt="Individual to team comparison">
+                    </div>
+                    <figcaption>individual to team</figcaption>
+                </figure>
+                <figure class="comparison-level-item">
+                    <div class="comparison-level-frame">
+                        <img src="images/comparison_3.svg" alt="Individual-to-team to individual-to-team comparison">
+                    </div>
+                    <figcaption>individual-to-team to individual-to-team</figcaption>
+                </figure>
+            </div>
         </section>
 
         <!-- Solution -->
@@ -55,7 +73,7 @@
             <span class="case-block-label">How did I solve it?</span>
             <div class="details-section">
                 <h2>Scrollytelling first—NYT style.</h2>
-                <p>Create narratives from test data so insights are meaningful and digestible.</p>
+                <p>Create narratives from test data so insights are meaningful and digestible. Present them in a delightful and engaging way to convince stakeholders that this is worth pursuing</p>
                 <video class="details-video" muted loop playsinline autoplay
                     src="videos/scrolly-telling.mov"
                     type="video/quicktime">
