--- a/gallup.html
+++ b/gallup.html
@@ -21,6 +21,7 @@
                     <li><a href="index.html#work">work</a></li>
                     <li><a href="index.html#about">about</a></li>
                     <li><a href="playground.html">playground</a></li>
+                    <li><a href="resume.pdf" target="_blank" rel="noopener">resume</a></li>
                 </ul>
             </nav>
         </div>
@@ -73,7 +74,7 @@
             <span class="case-block-label">How did I solve it?</span>
             <div class="details-section">
                 <h2>Scrollytelling first—NYT style.</h2>
-                <p>Create narratives from test data so insights are meaningful and digestible. Present them in a delightful and engaging way to convince stakeholders that this is worth pursuing</p>
+                <p>Create narratives from test data so insights are meaningful and digestible. Present them in a delightful and engaging way to convince stakeholders that this is worth pursuing.</p>
                 <video class="details-video" muted loop playsinline autoplay
                     src="videos/scrolly-telling.mov"
                     type="video/quicktime">
