--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
                     <li><a href="#work">work</a></li>
                     <li><a href="#about">about</a></li>
                     <li><a href="playground.html">playground</a></li>
+                    <li><a href="resume.pdf" target="_blank" rel="noopener">resume</a></li>
                 </ul>
             </nav>
         </div>
